--- a/src/scss/_stepper.scss
+++ b/src/scss/_stepper.scss
@@ -1,18 +1,82 @@
 .progress {
-  grid-area: progress;
-  max-height: 150px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 24px 0;
 }
 
 .stepper-wrapper {
-  margin-top: 3rem;
+  display: flex;
+  margin-top: 1.5rem;
+}
+
+.step {
+  position: relative;
+  display: flex;
+  align-items: center;
+  @include getStepNumbers(3);
+  &.disabled .step-circle {
+    border: 1px solid $circle-gray;
+    color: $circle-gray;
+  }
+  &.disabled .step-title {
+    color: $circle-gray;
+  }
+  &.disabled ~ .step-connect {
+    background-color: $circle-gray;
+  }
+  &.checked .step-circle::after {
+    content: "\2714";
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.step-connect {
+  transform: translateY(16px);
+  background-color: $black;
+  flex: 0 0 auto;
+  margin: 0 2rem;
+  width: 60px;
+  height: 2px;
 }
 
 .step-title {
-  display: inline-block;
-  width: max-content;
-  margin-left: 0.5rem;
+  display: none;
 }
 
-.title-lg {
-  font-size: 2rem;
+.step-circle {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  position: relative;
+  background-color: $bg-white;
+}
+
+.step.active .step-circle,
+.step.checked .step-circle {
+  background-color: $black;
+  color: $bg-white;
+}
+
+@media screen and (min-width: 375px) {
+  .progress {
+    grid-area: progress;
+    max-height: 150px;
+  }
+
+  .stepper-wrapper {
+    margin-top: 3rem;
+  }
+
+  .step-title {
+    display: inline-block;
+    width: max-content;
+    margin-left: 0.5rem;
+  }
+
+  .title-lg {
+    font-size: 2rem;
+  }
 }
