--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,12 @@
-@import './reset';
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap");
+@import './variables';
+@import './mixins';
 @import './base';
-@import './navbar';
 @import './navbar';
 @import './stepper';
 @import './form';
 @import './cart';
+@import './buttons';
 @import './footer';
 
 #app {
