--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap");
 @import './variables';
 @import './mixins';
 @import './base';
@@ -10,6 +9,7 @@
 @import './footer';
 
 #app {
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  margin: 0 auto;
+  max-width: 1110px;
 }
