--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -2,6 +2,7 @@
   width: 100%;
   padding-top: 24px;
   padding-bottom: 40px;
+  margin-top: 30px;
   border-top: 2px solid $button-top-border;
   display: flex;
   justify-content: space-between;
